# openAI-api

./: main.py  pyproject.toml
src/: create.py
src/views/index/: view.py
src/views/items/: view.py
tests/: conftest.py
tests/app/views/: conftest.py
tests/chatbot/: conftest.py
tests/chatbot/bot/: chatbot.py  test_app.py
tests/chatbot/convert/: covert_csv.py  embedding.py  test_covert_csv.py  test_embedding.py
tests/google_search/: app.py  test_google_search.py
tests/gpt/: test_gpt_api.py
tests/pdf/: app.py  constant.py  test_extract_parese_json.py
tests/twitter/: test_twitter_api.py
tests/views/index/: test_index_view.py
tests/whisper/: conftest.py  test_translate.py
