[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["tiaz0128 <tiaz0128.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"
openai = "^1.23.6"
python-dotenv = "^1.0.1"
tweepy = "^4.14.0"
pandas = "^2.2.2"
tiktoken = "^0.6.0"
plotly = "^5.22.0"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
google-api-python-client = "^2.128.0"
langchain = "^0.1.19"
langchain-core = "^0.1.52"
langchain-community = "^0.0.38"
langchain-openai = "^0.1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
